flask_configs/flask-test-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-flask-deployment
  namespace: fl-pg-ns
  labels:
    app: web-flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: achskv/flask_test:1.1.1
        ports:
        - containerPort: 80
