flask_configs/flask-test-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: LoadBalancer
  selector:
    app: flask
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: 5000
